@@ -89,6 +89,7 @@ Template for new versions:
 - `nestboxes`: increase the scanning frequency for fertile eggs to reduce the chance that they get snarfed by eager dwarves
 - `autonestbox`: wait until juveniles become adults before they are assigned to nestboxes
 - `suspendmanager`: add option to ``unsuspend`` that unsuspends all jobs, regardless of potential issues
+- `gui/create-item`: allow right click to cancel out of material dialog submenus
 
 ## Documentation
 - `installing`: add instructions for how to use Steam DFHack with non-Steam DF (for DFHack auto-updates and cloud backups)
